unpackaged/main/default/objects/Contact/fields/Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>