unpackaged/main/default/objects/Contact/fields/event_count__c.field-meta.xml
<CustomField>
    <fullName>event_count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>event count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>