unpackaged/main/default/objects/Contact/fields/task_count__c.field-meta.xml
<CustomField>
    <fullName>task_count__c</fullName>
    <defaultValue>20</defaultValue>
    <label>task count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>